fix: fixed scale z-index

--- a/src/components/scale/scale.module.scss
+++ b/src/components/scale/scale.module.scss
@@ -8,6 +8,7 @@
   align-items: center;
   cursor: pointer;
   transition: all 0.5s;
+  z-index: 1000;
   svg{
     color:#FFFFFF;
     transition: all 0.5s;
